--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,12 @@ html,body {
     z-index: 1;
 }
 
+.canais.box img {
+    opacity: 0;
+    transition: opacity .6s;
+    will-change: opacity;
+}
+
 .player.box {
     position: absolute;
     right: 0;
@@ -113,8 +119,14 @@ html,body {
 }
 
 video {
+    position: absolute;
+    top: 0; left: 0;
     width: 100%;
     height: 100%;
+    opacity: 0;
+    transition: opacity .3s;
+    will-change: opacity;
+    z-index: 1;
 }
 
 .err {
@@ -134,7 +146,7 @@ video {
     100% {opacity:.6}
 }
 
-.notransition {
+.notransition * {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     -o-transition: none !important;
